# inheritable

./: .gitignore  README.md  package-lock.json  package.json  patch3.diff  solana2.diff  tailwind.config.js
contract/: ERC20.sol  Inheritance.sol  Ownable.sol  Pausable.sol  SafeMath.sol  deploy_contract.py
contract/solana/: package-lock.json  package.json
contract/solana/src/client/: inheritable_test.ts  main.ts  utils.ts
contract/solana/src/program/: Cargo.toml
contract/solana/src/program/src/: lib.rs  piggybank.rs
public/: favicon  index.html
src/: App.css  App.js  FiatTokenV1_abi.json  Inheritance_abi.json  Oracle.js  Reader.js  WeaveHash_abi.json  Writer.js  base.patch  index.css  navBar.js
src/components/: claim.js  form.js  sidebar-wrapper.js  sidebaroracle.js  sidebarwriter.js
src/weaveapi/: apicontext.js  clienthttp.js  clientws.js  filter.js  helper.js  keys.js  nodeapi.js  options.js  record.js  records.js  session.js  weaveapi.js
