
[package]
name = "inheritable"
version = "0.0.1"
description = "Inheritable"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
arrayref = "0.3.6"
serde = "1.0.130"
byteorder = "1.4.3"
bs58 = "0.4.0"
borsh-derive = "0.9.1"
#solana-program = "=1.8.3"
solana-program = "1.9.0"

[dev-dependencies]
#solana-program-test = "=1.8.3"
#solana-sdk = "=1.8.3"
solana-program-test = "1.9.0"
solana-sdk = "1.9.0"

[lib]
name = "inheritable"
crate-type = ["cdylib", "lib"]
